2009-05-04 Braden McDaniel  <braden@endoframe.com>

	Initialize the viewer in openvrml::gl::viewer::checkSensitive.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::initialize()): Return if the viewer has
	already been initialized.
	(openvrml::gl::viewer::redraw()): Moved "already-initialized"
	check to the initialize function.
	(openvrml::gl::viewer::checkSensitive(int, int, event_type)): Call
	viewer::initialize.

2009-05-03 Braden McDaniel  <braden@endoframe.com>

	Improved lod_node::do_modified only to check the currently
	applicable child node(s).

	* src/node/vrml97/lod.cpp
	(lod_node::do_modified() const): Just check current_children_.
	(lod_node::do_render_child(openvrml::viewer &,
	openvrml::rendering_context)): Update current_children_ with the
	currently appropriate "level".

2009-05-01 Braden McDaniel  <braden@endoframe.com>

	* src/node/vrml97/background.cpp
	(openvrml_node_vrml97::background_metatype::do_render(openvrml::viewer&)
	const): Remove the texture objects from the viewer if the
	background has been modified.
	* src/node/vrml97/background.cpp
	(openvrml_node_vrml97::background_node): Changed front, back,
	left, right, top, and bottom members to front_, back_, left_,
	right_, top_, and bottom_.  This avoids shadowing the
	openvrml::background_node member functions and is consistent with
	existing conventions in OpenVRML.

2009-05-01 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::do_insert_background(const
	background_node&)): Store/retrieve the display list.

2009-04-30 Braden McDaniel  <braden@endoframe.com>

	Added abstract node type openvrml::background_node.

	* src/libopenvrml/openvrml/local/externproto.cpp
	(openvrml::local::externproto_node::to_background()): Added
	implementation of openvrml::node::to_background.
	* src/libopenvrml/openvrml/local/externproto.h
	(openvrml::local::externproto): Override
	openvrml::node::to_background.